<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <EditText
        android:id="@+id/txtIngresarNombre"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/txtIngresarNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngresarDni" />

    <EditText
        android:id="@+id/txtIngresarClave"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/txtIngresarClave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngresarNombre" />

    <EditText
        android:id="@+id/txtIngresarClavaRep"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/txtIngresarClaveRep"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngresarClave" />

    <EditText
        android:id="@+id/txtIngresarDni"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="54dp"
        android:ems="10"
        android:hint="@string/txtIngresarDni"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTittleRegistrar" />

    <Button
        android:id="@+id/btnRegistrarUsuario"
        android:layout_width="311dp"
        android:layout_height="52dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="203dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngresarClavaRep"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTittleRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="177dp"
        android:text="@string/txtTittle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>