<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="369dp"
        android:layout_height="59dp"
        android:layout_marginTop="23dp"
        android:backgroundTint="#B7C3C2"
        android:text="@string/btnCrear"
        android:textColor="#141515"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />


    <ImageView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="142dp"
        android:src="@drawable/iniciosesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/iniciosesion" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="369dp"
        android:layout_height="59dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/txtCorreo"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="371dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="19dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDni" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="372dp"
        android:layout_height="57dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:layout_marginTop="81dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoText="false"
            android:text="@string/lblLogin"
            android:textAlignment="center"
            android:textSize="34sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>